# ingestion-app/src/main/resources/static/api/swagger.yml
@@ -62,6 +62,27 @@ paths:
               description: "Client did not send the user info correctly"
           500:
               description: "A generic backend error occurred"
+  /v1/alerts:
+    post:
+      tags:
+        - alerts
+      summary: Sends alerts to ingestion app
+      operationId: receiveAlerts
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/AlertsDTO"
+      responses:
+        200:
+          description: "Alerts were successfully sent"
+        400:
+          description: "Grafana did not send the alerts correctly"
+        401:
+          description: "Grafana did not provide valid credentials"
+        500:
+          description: "A generic backend error occurred"
 components:
   schemas:
     MetricsDTO:
@@ -118,3 +139,40 @@ components:
       properties:
           username:
             type: string
+    AlertsDTO:
+      type: object
+      required:
+        - receiver
+        - groupLabels
+        - alerts
+      properties:
+        receiver:
+          type: string
+        groupLabels:
+          type: object
+        alerts:
+          type: array
+          items:
+            $ref: "#/components/schemas/AlertDTO"
+    AlertDTO:
+      type: object
+      required:
+        - status
+        - labels
+        - startsAt
+        - endsAt
+        - values
+        - imageURL
+      properties:
+        status:
+          type: string
+        labels:
+          type: object
+        startsAt:
+          type: string
+        endsAt:
+          type: string
+        values:
+          type: object
+        imageURL:
+          type: string
